feat: add image of shahi paneer

--- a/recipes/shahi-paneer.html
+++ b/recipes/shahi-paneer.html
@@ -7,5 +7,11 @@
 	</head>
 	<body>
 		<h1>Shahi Paneer</h1>
+		<img
+			src="https://www.allrecipes.com/thmb/taQSsUKxw_OW_KciM4C9nk8T1-0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4484971-ca3a971bf6f64f80ac56494ee2cda0b5.jpg"
+			alt="Shahi Paneer in a Pan"
+			height="400px"
+			width="400px"
+		/>
 	</body>
 </html>
