feat: add description of Shahi Paneer

--- a/recipes/shahi-paneer.html
+++ b/recipes/shahi-paneer.html
@@ -13,5 +13,12 @@
 			height="400px"
 			width="400px"
 		/>
+		<h3>Description</h3>
+		<p>
+			Shahi Paneer is a Mughlai dish where paneer is cooked in a creamy gravy
+			made of onions, yogurt, nut and seeds. As the name suggests, Shahi Paneer
+			literally means “Paneer for the Royalty”. So it is cooked with ingredients
+			that impart a richness to the dish like yogurt, cream, nuts and seeds.
+		</p>
 	</body>
 </html>
