--- a/recipes/shahi-paneer.html
+++ b/recipes/shahi-paneer.html
@@ -20,5 +20,22 @@
 			literally means “Paneer for the Royalty”. So it is cooked with ingredients
 			that impart a richness to the dish like yogurt, cream, nuts and seeds.
 		</p>
+		<h3>Ingredients</h3>
+		<ul>
+			<li>2 tablespoons cooking oil</li>
+			<li>1 large onion, thinly sliced</li>
+			<li>4 cloves garlic, minced</li>
+			<li>1 teaspoon ground cumin</li>
+			<li>1 teaspoon ground coriander</li>
+			<li>½ teaspoon ground turmeric</li>
+			<li>½ teaspoon Kashmiri red chili powder</li>
+			<li>4 tomatoes, pureed</li>
+			<li>½ pound paneer, cubed</li>
+			<li>¼ cup water</li>
+			<li>1 teaspoon white sugar</li>
+			<li>salt to taste</li>
+			<li>¼ cup cream</li>
+			<li>2 tablespoons chopped fresh cilantro</li>
+		</ul>
 	</body>
 </html>
