feat: add link to rajma.html in index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<body>
 		<h1>Odin Recipes</h1>
 		<a href="recipes/shahi-paneer.html">Shahi Paneer</a>
+		<a href="recipes/rajma.html">Rajma</a>
 	</body>
 </html>
