feat: add link to chana-masala.html in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<body>
 		<h1>Odin Recipes</h1>
 		<a href="recipes/shahi-paneer.html">Shahi Paneer</a>
-		<a href="recipes/rajma.html">Rajma</a>
+		<br /><a href="recipes/rajma.html">Rajma</a> <br /><a
+			href="recipes/chana-masala.html"
+			>Chana Masala</a
+		>
 	</body>
 </html>
