--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
-		<a href="recipes/shahi-paneer.html">Shahi Paneer</a>
-		<br /><a href="recipes/rajma.html">Rajma</a> <br /><a
-			href="recipes/chana-masala.html"
-			>Chana Masala</a
-		>
+		<ul>
+			<li><a href="recipes/shahi-paneer.html">Shahi Paneer</a></li>
+			<li><a href="recipes/rajma.html">Rajma</a></li>
+			<li><a href="recipes/chana-masala.html">Chana Masala</a></li>
+		</ul>
 	</body>
 </html>
